--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,4 +1,5 @@
 .container {
+    position: relative;
     width: 80%;
     height: 60px;
     background: linear-gradient(to right, orange,rgb(185, 121, 0));
@@ -6,7 +7,7 @@
     text-align: center;
 }
 
-.container_image_input{
+.container_input{
     display: inline-block;
     position: relative;
     height: 70%;
@@ -15,11 +16,13 @@
     border-radius: 3px;
     margin: 0 auto;
     top: 50%;
-    
     transform: translateY(-50%);
+    text-align: left;
 }
 
 .button{
+    border: 0;
+    padding: 0;
     border-radius: 3px;
     background-color: orange;
     position: relative;
@@ -29,4 +32,59 @@
     width: 50px;
     top: 50%;
     transform: translateY(-50%);
+}
+
+.button:hover{
+    background-color: rgb(255, 192, 75);
+}
+
+.button:focus{
+    border: 0;
+    outline: 0;
+}
+
+.button:active{
+    background-color: orange;
+    box-shadow: inset 0 0 2px #000000;
+}
+
+.svg{
+    position: absolute;
+    fill: white;
+    width: 30px;
+    height: 30px;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 10px;
+}
+
+.svg1{
+    position: absolute;
+    fill: white;
+    width: 30px;
+    height: 30px;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 10px;
+}
+
+.input{
+    position: absolute;
+    width: 93%;
+    top: 53%;
+    transform: translateY(-50%);
+    left: 50px;
+    background: none;
+    border: 0;
+    color: white;
+    font-weight: bold;
+}
+
+.input:focus{
+    border: 0;
+    outline: 0;
+}
+
+.input::placeholder{
+    color: white;
 }
