--- a/src/components/MovieList.css
+++ b/src/components/MovieList.css
@@ -1,12 +1,12 @@
 .container_list{
-    width: 60%;
-    height: 400px;
-    background: chartreuse;
+    width: 61%;
+    background: rgb(243, 243, 243);
     margin: 0 auto;
     position: absolute;
     top: 9px;
     left: 50%;
     transform: translateX(-50%);
+    box-shadow: 2px 2px 10px #03030336;
 }
 
 .container_list::after{
@@ -50,4 +50,14 @@
 .placeholder{
     font-size: 12px;
     margin: 5px 0 5px 50px;
+}
+
+.list_item{
+    margin:5px 0 10px 0;
+    padding: 5px 0 7px;
+}
+
+.list_item:hover{
+    margin:5px 0 10px 0;
+    background-color: rgb(126, 126, 126);
 }
