--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,99 +1,116 @@
 .container {
-    position: relative;
-    width: 80%;
-    height: 60px;
-    background: linear-gradient(to right, rgb(228, 129, 0),rgb(190, 109, 2));
-    margin: 0 auto;
-    text-align: center;
+  position: relative;
+  width: 80%;
+  height: 60px;
+  background: linear-gradient(to right, rgb(228, 129, 0), rgb(190, 109, 2));
+  margin: 0 auto;
+  text-align: center;
 }
 
-.container_input{
-    display: inline-block;
-    position: relative;
-    height: 70%;
-    width: 80%;
-    background-color: rgba(255, 255, 255, 0.555);
-    border-radius: 3px;
-    margin: 0 auto;
-    top: 50%;
-    transform: translateY(-50%);
-    text-align: left;
+.container_input {
+  display: inline-block;
+  position: relative;
+  height: 70%;
+  width: 80%;
+  background-color: rgba(255, 255, 255, 0.555);
+  border-radius: 3px;
+  margin: 0 auto;
+  top: 50%;
+  transform: translateY(-50%);
+  text-align: left;
 }
 
-.button{
-    border: 0;
-    padding: 0;
-    border-radius: 3px;
-    background-color: white;
-    position: relative;
-    margin-left: 5px;
-    display: inline-block;
-    height: 70%;
-    width: 50px;
-    top: 50%;
-    transform: translateY(-50%);
+.button {
+  border: 0;
+  padding: 0;
+  border-radius: 3px;
+  background-color: white;
+  position: relative;
+  margin-left: 5px;
+  display: inline-block;
+  height: 70%;
+  width: 50px;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
-.button:hover{
-    background-color: rgb(255, 192, 75);
+.button:hover {
+  background-color: rgb(255, 192, 75);
 }
 
-.button:focus{
-    border: 0;
-    outline: 0;
+.button:focus {
+  border: 0;
+  outline: 0;
 }
 
-.button:active{
-    background-color: orange;
-    box-shadow: inset 0 0 2px #000000;
+.button:active {
+  background-color: orange;
+  box-shadow: inset 0 0 2px #000000;
 }
 
-.svg{
-    position: absolute;
-    fill: white;
-    width: 30px;
-    height: 30px;
-    top: 50%;
-    transform: translateY(-50%);
-    left: 10px;
+.svg {
+  position: absolute;
+  fill: white;
+  width: 30px;
+  height: 30px;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 10px;
 }
 
-.svg1{
-    position: absolute;
-    fill: white;
-    width: 30px;
-    height: 30px;
-    top: 50%;
-    transform: translateY(-50%);
-    left: 10px;
+.svg1 {
+  position: absolute;
+  fill: white;
+  width: 30px;
+  height: 30px;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 10px;
 }
 
-.input{
-    position: absolute;
-    width: 93%;
-    top: 53%;
-    transform: translateY(-50%);
-    left: 50px;
-    background: none;
-    border: 0;
-    color: white;
-    font-weight: bold;
+.input {
+  position: absolute;
+  width: 93%;
+  top: 53%;
+  transform: translateY(-50%);
+  left: 50px;
+  background: none;
+  border: 0;
+  color: white;
+  font-weight: bold;
 }
 
-.input:focus{
-    border: 0;
-    outline: 0;
+.input:focus {
+  border: 0;
+  outline: 0;
 }
 
-.input::placeholder{
-    color: white;
+.input::placeholder {
+  color: white;
 }
 
-.bottom_container{
-    position: relative;
-    width: 80%;
-    height: 100vh;
-    background: white;
-    margin: 0 auto;
-    text-align: center;
+.bottom_container {
+  position: relative;
+  width: 80%;
+  height: 100vh;
+  background: white;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.appear-enter {
+  overflow: hidden;
+  height: 0;
+}
+.appear-enter-active {
+  height: 685px;
+  transition: all 500ms ease-in-out;
+}
+.appear-exit {
+  overflow: hidden;
+  height: 685px;
+}
+.appear-exit-active {
+  height: 0px;
+  transition: all 500ms ease-in-out;
 }
