--- a/src/components/MovieList.css
+++ b/src/components/MovieList.css
@@ -1,63 +1,58 @@
-.container_list{
-    width: 61%;
-    background: rgb(243, 243, 243);
-    margin: 0 auto;
-    position: absolute;
-    top: 9px;
-    left: 50%;
-    transform: translateX(-50%);
-    box-shadow: 2px 2px 10px #03030336;
+.container_list {
+  width: 61%;
+  background: rgb(243, 243, 243);
+  margin: 0 auto;
+  position: absolute;
+  top: 9px;
+  left: 50%;
+  transform: translateX(-50%);
+  box-shadow: 2px 2px 10px #03030336;
+  /* overflow: hidden; */
 }
 
-.container_list::after{
-    height: 10px;
-    width: 10px;
-    background: red;
+.svg_list {
+  position: absolute;
+  fill: black;
+  width: 25px;
+  height: 25px;
+  top: 15px;
+
+  left: 10px;
 }
 
-.svg_list{
-    position: absolute;
-    fill: black;
-    width: 25px;
-    height: 25px;
-    top: 15px;
-    
-    left: 10px;
+.line {
+  width: 100%;
+  height: 5px;
+  border-bottom: 1px solid black;
 }
 
-.line{
-    width: 100%;
-    height: 5px;
-    border-bottom: 1px solid black;
+.title {
+  margin: 10px 0 1px 47px;
+  background: none;
+  width: 80%;
+  border: 0;
+  font-size: 17px;
 }
-
-.title{
-    margin: 10px 0 1px 47px;
-    background: none;
-    width: 80%;
-    border: 0;
-    font-size: 17px;
-}
-
 
 .title:focus,
-.title:active
-{
-    border: 0;
-    outline: 0;
+.title:active {
+  border: 0;
+  outline: 0;
 }
 
-.placeholder{
-    font-size: 12px;
-    margin: 5px 0 5px 50px;
+.placeholder {
+  font-size: 12px;
+  margin: 5px 0 5px 50px;
 }
 
-.list_item{
-    margin:5px 0 10px 0;
-    padding: 5px 0 7px;
+.list_item {
+  margin: 5px 0 10px 0;
+  padding: 5px 0 7px;
+  cursor: pointer;
 }
 
-.list_item:hover{
-    margin:5px 0 10px 0;
-    background-color: rgb(126, 126, 126);
+.list_item:hover {
+  margin: 5px 0 10px 0;
+  background-color: rgb(209, 209, 209);
 }
+
